feat: Tenant Service
fixes indivorg/service-tenant#8

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,4 +18,5 @@ jobs:
             indivorg/service-journal
             indivorg/service-program
             indivorg/service-task
+            indivorg/service-tenant
           github-token: ${{ secrets.GH_PRIVATE_TOKEN }}
