--- a/templates/.github/workflows/pull-request.yaml
+++ b/templates/.github/workflows/pull-request.yaml
@@ -11,6 +11,13 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+          registry-url: https://npm.pkg.github.com/
+          scope: '@indivorg'
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -22,8 +29,6 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
-      - run: "echo '//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN' >> .npmrc"
 
       - run: yarn install
         env:
