feat: Contract service

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,4 +19,5 @@ jobs:
             indivorg/service-program
             indivorg/service-task
             indivorg/service-tenant
+            indivorg/service-contract
           github-token: ${{ secrets.GH_PRIVATE_TOKEN }}
