feat: Notifications setvice

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,4 +20,5 @@ jobs:
             indivorg/service-task
             indivorg/service-tenant
             indivorg/service-contract
+            indivorg/service-notification
           github-token: ${{ secrets.GH_PRIVATE_TOKEN }}
