--- a/templates/service/.github/workflows/pull-request.yaml
+++ b/templates/service/.github/workflows/pull-request.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 1
 
@@ -32,7 +32,7 @@ jobs:
 
       - run: yarn install
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
 
       - run: yarn build
 
