--- a/templates/service/.github/workflows/canary-release.yaml
+++ b/templates/service/.github/workflows/canary-release.yaml
@@ -53,6 +53,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          build-args: |
+            NPM_TOKEN=${{ secrets.INDIVBOT_GITHUB_TOKEN }}
 
       - name: Request version update
         uses: peter-evans/repository-dispatch@v1
