--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -21,7 +21,7 @@ jobs:
               q: 'user:indivorg'
             });
             return items.map(i => i.full_name).join('\n');
-      - run: echo ${{ steps.search.outputs.result }}
+      - run: echo '${{ steps.search.outputs.result }}'
       - uses: micnncim/action-label-syncer@v1
         with:
           manifest: labels.yml
