--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -2,3 +2,15 @@ template: |
   ## What’s Changed
 
   $CHANGES
+categories:
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '🧰 Maintenance'
+    label: 'chore'
