sync private repositories too

--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -16,6 +16,7 @@ jobs:
         id: search
         with:
           result-encoding: string
+          github-token: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
           script: |
             const { data: { items } } = await github.search.repos({
               q: 'user:indivorg'
