fix: add skip-commit to release-drafter

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           github-token: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
           output-file: "false"
+          skip-commit: true
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
