--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -16,11 +16,13 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
       - name: Conventional Changelog Action
+        id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
           github-token: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
           output-file: "false"
-          skip-commit: true
+          skip-commit: "true"
+          skip-version-file: "true"
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
