--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,15 @@ updates:
       - "dependencies"
       - "templates/service"
   - package-ecosystem: "github-actions"
+    directory: "/templates/monorepo-service"
+    schedule:
+      interval: "daily"
+    labels:
+      - "impact/no-changelog-required"
+      - "github_actions"
+      - "dependencies"
+      - "templates/service"
+  - package-ecosystem: "github-actions"
     directory: "/templates/infra"
     schedule:
       interval: "daily"
