chore: schedule dependabot to run weekly

--- a/templates/service/.github/dependabot.yml
+++ b/templates/service/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     reviewers:
       - indivorg/developers
     schedule:
-      interval: "daily"
+      interval: "weekly"
     ignore:
       - dependency-name: "typescript*"
       - dependency-name: "@types/node"
