--- a/templates/monorepo-service/.github/workflows/pull-request.yaml
+++ b/templates/monorepo-service/.github/workflows/pull-request.yaml
@@ -7,34 +7,12 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v2.3.4
+      - uses: actions/setup-node@v2
         with:
           node-version: '14.x'
-          registry-url: https://npm.pkg.github.com/
-          scope: '@indivorg'
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2.1.6
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Configure yarn
-        run: yarn config set 'npmScopes["indivorg"].npmAuthToken' ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
-
+          cache: 'yarn'
       - run: yarn install
-
       - run: yarn build
-
       - run: yarn test --passWithNoTests
+
