--- a/templates/monorepo-service/.github/workflows/push.yml
+++ b/templates/monorepo-service/.github/workflows/push.yml
@@ -19,28 +19,14 @@ jobs:
           step: start
           token: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
           env: production
+
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Cache NPM packages 👾
-        uses: actions/cache@v2.1.6
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - name: Configure yarn
-        run: yarn config set 'npmScopes["indivorg"].npmAuthToken' ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
+          node-version: '14.x'
+          cache: 'yarn'
 
       - name: Install packages 📦
         run: yarn
