--- a/templates/monorepo-service/dockerfiles/Dockerfile.generic-node-app
+++ b/templates/monorepo-service/dockerfiles/Dockerfile.generic-node-app
@@ -7,7 +7,7 @@ WORKDIR /usr/src/app
 
 COPY package.json yarn.lock .yarnrc.yml tsconfig.node.json ./
 COPY .yarn ./.yarn
-COPY packages ./packages
+COPY packages/**/package.json ./packages
 
 RUN \
   if [[ -z "$PACKAGE_NAME" ]] ; \
@@ -17,13 +17,13 @@ RUN \
 
 WORKDIR /usr/src/app/packages/$PACKAGE_NAME
 
-RUN yarn config set 'npmScopes["indivorg"].npmAuthToken' $NPM_TOKEN
-RUN yarn config set enableGlobalCache false
 RUN yarn workspaces focus $PACKAGE_NAME
+
+COPY packages ./packages
+
 RUN yarn build
 RUN yarn workspaces focus --production $PACKAGE_NAME
 RUN yarn cache clean
-RUN rm -f .npmrc
 
 FROM node:14.17.3-alpine
 
