--- a/templates/monorepo-service/.github/workflows/pull-request.yaml
+++ b/templates/monorepo-service/.github/workflows/pull-request.yaml
@@ -14,5 +14,5 @@ jobs:
           cache: 'yarn'
       - run: yarn install
       - run: yarn build
-      - run: yarn test --passWithNoTests
+      - run: yarn test
 
