--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,7 +4,8 @@ on:
     inputs:
       query:
         default: org:indivorg topic:service
-        description: Github Search for which repos will get this manual deployment.
+        description:
+          Github Search for which repos will get this manual deployment.
         required: true
 
 jobs:
@@ -18,5 +19,5 @@ jobs:
           query: ${{ github.event.inputs.query }}
           base-path: templates/service/
           token: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
-          title: "chore(workflow): Manual deploy from ${{ env.CI_ACTOR }}"
+          title: 'chore(workflow): Manual deploy from ${{ env.CI_ACTOR }}'
           head: kopier-${{ env.CI_REF_NAME_SLUG }}-${{ env.CI_SHA_SHORT }}
