--- a/.github/workflows/push-to-mono-services.yml
+++ b/.github/workflows/push-to-mono-services.yml
@@ -16,5 +16,5 @@ jobs:
           query: org:indivorg topic:monorepo-service
           base-path: templates/monorepo-service/
           token: ${{ secrets.INDIVBOT_GITHUB_TOKEN }}
-          title: "chore(workflow): Bump to ${{ github.event.release.tag_name }}"
+          title: 'chore(workflow): Bump to ${{ github.event.release.tag_name }}'
           head: kopier-${{ github.event.release.tag_name }}
