--- a/labels.yml
+++ b/labels.yml
@@ -18,6 +18,9 @@
   color: 006b75
 - name: impact/breaking
   description: Backwards incompatible
+- name: impact/approved-breaking-change
+  description: 'Backwards incompatible changes that are approved'
+  color: 88E1CD
   color: bfe5bf
 - name: impact/changelog
   description: Changelog related
