--- a/templates/monorepo-service/dockerfiles/Dockerfile.generic-node-app
+++ b/templates/monorepo-service/dockerfiles/Dockerfile.generic-node-app
@@ -1,4 +1,4 @@
-FROM node:16.13.0-alpine as build
+FROM node:16.13.0-alpine3.14 as build
 
 ARG PACKAGE_NAME
 ARG NPM_TOKEN
@@ -25,7 +25,7 @@ RUN yarn build
 RUN yarn workspaces focus --production $PACKAGE_NAME
 RUN yarn cache clean
 
-FROM node:16.13.0-alpine
+FROM node:16.13.0-alpine3.14
 
 ARG PACKAGE_NAME
 
