--- a/templates/service/Dockerfile
+++ b/templates/service/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.17.3-alpine as build
+FROM node:16.13.0-alpine3.14 as build
 
 WORKDIR /usr/src/app
 
@@ -12,7 +12,7 @@ COPY . .
 
 RUN yarn build
 
-FROM node:16.17.3-alpine
+FROM node:16.13.0-alpine3.14
 
 WORKDIR /usr/src/app
 
