--- a/templates/service/.github/workflows/pull-request.yaml
+++ b/templates/service/.github/workflows/pull-request.yaml
@@ -3,8 +3,8 @@ on:
   pull_request:
 
 jobs:
-  pr:
-    name: Build and Test
+  build-yarn:
+    name: Yarn
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
@@ -15,3 +15,45 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: yarn test
+  build-docker:
+    runs-on: ubuntu-latest
+    name: Docker
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Authenticate with Google Cloud Platform
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GOOGLE_PROJECT_SA_KEY }}
+
+      - run: gcloud auth configure-docker
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: eu.gcr.io/${{ secrets.GOOGLE_PROJECT_ID }}/${{
+            github.event.repository.name }}
+          tags: |
+            type=sha,prefix={{branch}}-
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            NPM_TOKEN=${{ secrets.INDIVBOT_GITHUB_TOKEN }}
