feat: change dependabot schedule and reviewers

--- a/templates/monorepo-service/.github/dependabot.yml
+++ b/templates/monorepo-service/.github/dependabot.yml
@@ -2,10 +2,8 @@ version: 2
 updates:
   - package-ecosystem: 'npm'
     directory: '/'
-    reviewers:
-      - indivorg/developers
     schedule:
-      interval: 'daily'
+      interval: 'weekly'
     ignore:
       - dependency-name: 'typescript*'
       - dependency-name: '@types/node'
